--- a/BookItSrc/src/index.html
+++ b/BookItSrc/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
 </head>
 <body>
   <app-root></app-root>
