--- a/BookItSrc/src/index.html
+++ b/BookItSrc/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
   <app-root></app-root>
